Update POMs for starburst-snowflake
(cherry-picked from commit: 08c9b24c72d40dfc459d64ffb7dad38ac7f70b46)